# PhDPresentation

./: LICENSE  README.md  Shakefile  presthesis.cabal
fig/: 130602_task_times_all.eps  FAIR.eps  SRPT.eps  sojourn_time_huge.eps  sojourn_time_small.eps  usage1.eps  wl13_k5.eps
src/: Commands.hs  Main.hs  Presentation.hs  Style.hs  Utils.hs  responsetimes.tex
src/Style/: Outer.hs
